@@ -5,18 +5,22 @@ package freenet.client.async;
 
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.util.ArrayList;
 import java.util.LinkedList;
+import java.util.List;
+
+import com.db4o.ObjectContainer;
 
 import freenet.client.ArchiveContext;
 import freenet.client.ArchiveExtractCallback;
 import freenet.client.ArchiveFailureException;
+import freenet.client.ArchiveHandler;
 import freenet.client.ArchiveManager;
 import freenet.client.ArchiveRestartException;
-import freenet.client.ArchiveStoreContext;
 import freenet.client.ClientMetadata;
+import freenet.client.FetchContext;
 import freenet.client.FetchException;
 import freenet.client.FetchResult;
-import freenet.client.FetchContext;
 import freenet.client.Metadata;
 import freenet.client.MetadataParseException;
 import freenet.keys.BaseClientKey;
@@ -26,7 +30,7 @@ import freenet.keys.ClientKeyBlock;
 import freenet.keys.ClientSSK;
 import freenet.keys.FreenetURI;
 import freenet.keys.USK;
-import freenet.node.RequestScheduler;
+import freenet.support.LogThresholdCallback;
 import freenet.support.Logger;
 import freenet.support.api.Bucket;
 import freenet.support.compress.CompressionOutputSizeException;
@@ -35,11 +39,22 @@ import freenet.support.io.BucketTools;
 
 public class SingleFileFetcher extends SimpleSingleFileFetcher {
 
-	private static boolean logMINOR;
+	private static volatile boolean logMINOR;
+	
+	static {
+		Logger.registerLogThresholdCallback(new LogThresholdCallback() {
+			
+			@Override
+			public void shouldUpdate() {
+				logMINOR = Logger.shouldLog(Logger.MINOR, this);
+			}
+		});
+	}
+	
 	/** Original URI */
 	final FreenetURI uri;
 	/** Meta-strings. (Path elements that aren't part of a key type) */
-	final LinkedList metaStrings;
+	private final ArrayList<String> metaStrings;
 	/** Number of metaStrings which were added by redirects etc. They are added to the start, so this is decremented
 	 * when we consume one. */
 	private int addedMetaStrings;
@@ -48,7 +63,7 @@ public class SingleFileFetcher extends SimpleSingleFileFetcher {
 	private Metadata archiveMetadata;
 	final ArchiveContext actx;
 	/** Archive handler. We can only have one archive handler at a time. */
-	private ArchiveStoreContext ah;
+	private ArchiveHandler ah;
 	private int recursionLevel;
 	/** The URI of the currently-being-processed data, for archives etc. */
 	private FreenetURI thisKey;
@@ -57,34 +72,38 @@ public class SingleFileFetcher extends SimpleSingleFileFetcher {
 	private final Bucket returnBucket;
 	/** If true, success/failure is immediately reported to the client, and therefore we can check TOO_MANY_PATH_COMPONENTS. */
 	private final boolean isFinal;
-	private RequestScheduler sched;
 
 	/** Create a new SingleFileFetcher and register self.
 	 * Called when following a redirect, or direct from ClientGet.
 	 * FIXME: Many times where this is called internally we might be better off using a copy constructor? 
 	 */
 	public SingleFileFetcher(ClientRequester parent, GetCompletionCallback cb, ClientMetadata metadata,
-			ClientKey key, LinkedList metaStrings, FreenetURI origURI, int addedMetaStrings, FetchContext ctx,
-			ArchiveContext actx, ArchiveStoreContext ah, Metadata archiveMetadata, int maxRetries, int recursionLevel,
+			ClientKey key, List<String> metaStrings, FreenetURI origURI, int addedMetaStrings, FetchContext ctx, boolean deleteFetchContext,
+			ArchiveContext actx, ArchiveHandler ah, Metadata archiveMetadata, int maxRetries, int recursionLevel,
 			boolean dontTellClientGet, long l, boolean isEssential,
-			Bucket returnBucket, boolean isFinal) throws FetchException {
-		super(key, maxRetries, ctx, parent, cb, isEssential, false, l);
-		logMINOR = Logger.shouldLog(Logger.MINOR, this);
-		if(logMINOR) Logger.minor(this, "Creating SingleFileFetcher for "+key+" from "+origURI+" meta="+metaStrings.toString(), new Exception("debug"));
+			Bucket returnBucket, boolean isFinal, ObjectContainer container, ClientContext context) throws FetchException {
+		super(key, maxRetries, ctx, parent, cb, isEssential, false, l, container, context, deleteFetchContext);
+		if(logMINOR) Logger.minor(this, "Creating SingleFileFetcher for "+key+" from "+origURI+" meta="+metaStrings.toString()+" persistent="+persistent, new Exception("debug"));
 		this.isFinal = isFinal;
 		this.cancelled = false;
 		this.returnBucket = returnBucket;
 		this.dontTellClientGet = dontTellClientGet;
 		this.ah = ah;
+		if(persistent && ah != null) ah = ah.cloneHandler();
 		this.archiveMetadata = archiveMetadata;
 		//this.uri = uri;
 		//this.key = ClientKey.getBaseKey(uri);
 		//metaStrings = uri.listMetaStrings();
-		this.metaStrings = metaStrings;
+		if(metaStrings instanceof ArrayList && !persistent)
+			this.metaStrings = (ArrayList<String>)metaStrings;
+		else
+			// Always copy if persistent
+			this.metaStrings = new ArrayList<String>(metaStrings);
 		this.addedMetaStrings = addedMetaStrings;
-		this.clientMetadata = metadata;
+		this.clientMetadata = (metadata != null ? (ClientMetadata) metadata.clone() : new ClientMetadata());
 		thisKey = key.getURI();
-		this.uri = origURI;
+		if(origURI == null) throw new NullPointerException();
+		this.uri = persistent ? origURI.clone() : origURI;
 		this.actx = actx;
 		this.recursionLevel = recursionLevel + 1;
 		if(recursionLevel > ctx.maxRecursionLevel)
@@ -95,10 +114,9 @@ public class SingleFileFetcher extends SimpleSingleFileFetcher {
 	/** Copy constructor, modifies a few given fields, don't call schedule().
 	 * Used for things like slave fetchers for MultiLevelMetadata, therefore does not remember returnBucket,
 	 * metaStrings etc. */
-	public SingleFileFetcher(SingleFileFetcher fetcher, Metadata newMeta, GetCompletionCallback callback, FetchContext ctx2) throws FetchException {
+	public SingleFileFetcher(SingleFileFetcher fetcher, boolean persistent, boolean deleteFetchContext, Metadata newMeta, GetCompletionCallback callback, FetchContext ctx2, ObjectContainer container, ClientContext context) throws FetchException {
 		// Don't add a block, we have already fetched the data, we are just handling the metadata in a different fetcher.
-		super(fetcher.key, fetcher.maxRetries, ctx2, fetcher.parent, callback, false, true, fetcher.token);
-		logMINOR = Logger.shouldLog(Logger.MINOR, this);
+		super(persistent ? fetcher.key.cloneKey() : fetcher.key, fetcher.maxRetries, ctx2, fetcher.parent, callback, false, true, fetcher.token, container, context, deleteFetchContext);
 		if(logMINOR) Logger.minor(this, "Creating SingleFileFetcher for "+fetcher.key+" meta="+fetcher.metaStrings.toString(), new Exception("debug"));
 		this.returnBucket = null;
 		// We expect significant further processing in the parent
@@ -106,34 +124,42 @@ public class SingleFileFetcher extends SimpleSingleFileFetcher {
 		this.dontTellClientGet = fetcher.dontTellClientGet;
 		this.actx = fetcher.actx;
 		this.ah = fetcher.ah;
-		this.archiveMetadata = fetcher.archiveMetadata;
-		this.clientMetadata = (fetcher.clientMetadata != null ? (ClientMetadata) fetcher.clientMetadata.clone() : null);
+		if(persistent && ah != null) ah = ah.cloneHandler();
+		this.archiveMetadata = null;
+		this.clientMetadata = (fetcher.clientMetadata != null ? (ClientMetadata) fetcher.clientMetadata.clone() : new ClientMetadata());
 		this.metadata = newMeta;
-		this.metaStrings = new LinkedList();
+		this.metaStrings = new ArrayList<String>();
 		this.addedMetaStrings = 0;
 		this.recursionLevel = fetcher.recursionLevel + 1;
 		if(recursionLevel > ctx.maxRecursionLevel)
 			throw new FetchException(FetchException.TOO_MUCH_RECURSION);
-		this.thisKey = fetcher.thisKey;
-		this.decompressors = fetcher.decompressors;
-		this.uri = fetcher.uri;
+		this.thisKey = persistent ? fetcher.thisKey.clone() : fetcher.thisKey;
+		// Copy the decompressors. Just because a multi-level metadata splitfile 
+		// is compressed, that **doesn't** mean that the data we are eventually 
+		// going to fetch is!
+		this.decompressors = new LinkedList<COMPRESSOR_TYPE>(fetcher.decompressors);
+		if(fetcher.uri == null) throw new NullPointerException();
+		this.uri = persistent ? fetcher.uri.clone() : fetcher.uri;
 	}
 
 	// Process the completed data. May result in us going to a
 	// splitfile, or another SingleFileFetcher, etc.
 	@Override
-	public void onSuccess(ClientKeyBlock block, boolean fromStore, Object token, RequestScheduler sched) {
-		this.sched = sched;
+	public void onSuccess(ClientKeyBlock block, boolean fromStore, Object token, ObjectContainer container, ClientContext context) {
+		if(persistent) {
+			container.activate(parent, 1);
+			container.activate(ctx, 1);
+		}
 		if(parent instanceof ClientGetter)
-			((ClientGetter)parent).addKeyToBinaryBlob(block);
-		parent.completedBlock(fromStore);
+			((ClientGetter)parent).addKeyToBinaryBlob(block, container, context);
+		parent.completedBlock(fromStore, container, context);
 		// Extract data
 		
 		if(block == null) {
 			Logger.error(this, "block is null! fromStore="+fromStore+", token="+token, new Exception("error"));
 			return;
 		}
-		Bucket data = extract(block, sched);
+		Bucket data = extract(block, container, context);
 		if(data == null) {
 			if(logMINOR)
 				Logger.minor(this, "No data");
@@ -143,50 +169,70 @@ public class SingleFileFetcher extends SimpleSingleFileFetcher {
 		if(logMINOR)
 			Logger.minor(this, "Block "+(block.isMetadata() ? "is metadata" : "is not metadata")+" on "+this);
 		if(!block.isMetadata()) {
-			onSuccess(new FetchResult(clientMetadata, data), sched);
+			onSuccess(new FetchResult(clientMetadata, data), container, context);
 		} else {
 			if(!ctx.followRedirects) {
-				onFailure(new FetchException(FetchException.INVALID_METADATA, "Told me not to follow redirects (splitfile block??)"), sched);
+				onFailure(new FetchException(FetchException.INVALID_METADATA, "Told me not to follow redirects (splitfile block??)"), false, container, context);
 				data.free();
+				if(persistent) data.removeFrom(container);
 				return;
 			}
 			if(parent.isCancelled()) {
-				onFailure(new FetchException(FetchException.CANCELLED), sched);
+				onFailure(new FetchException(FetchException.CANCELLED), false, container, context);
 				data.free();
+				if(persistent) data.removeFrom(container);
 				return;
 			}
 			if(data.size() > ctx.maxMetadataSize) {
-				onFailure(new FetchException(FetchException.TOO_BIG_METADATA), sched);
+				onFailure(new FetchException(FetchException.TOO_BIG_METADATA), false, container, context);
 				data.free();
+				if(persistent) data.removeFrom(container);
 				return;
 			}
 			// Parse metadata
 			try {
+				removeMetadata(container);
 				metadata = Metadata.construct(data);
-				wrapHandleMetadata(false);
+				if(persistent)
+					container.store(this);
+				wrapHandleMetadata(false, container, context);
 				data.free();
+				if(persistent) data.removeFrom(container);
 			} catch (MetadataParseException e) {
-				onFailure(new FetchException(FetchException.INVALID_METADATA, e), sched);
+				onFailure(new FetchException(FetchException.INVALID_METADATA, e), false, container, context);
 				data.free();
+				if(persistent) data.removeFrom(container);
 				return;
 			} catch (IOException e) {
 				// Bucket error?
-				onFailure(new FetchException(FetchException.BUCKET_ERROR, e), sched);
+				onFailure(new FetchException(FetchException.BUCKET_ERROR, e), false, container, context);
 				data.free();
+				if(persistent) data.removeFrom(container);
 				return;
 			}
 		}
 	}
 
 	@Override
-	protected void onSuccess(FetchResult result, RequestScheduler sched) {
-		this.sched = sched;
-		unregister(false);
+	protected void onSuccess(FetchResult result, ObjectContainer container, ClientContext context) {
+		if(persistent) {
+			container.activate(decompressors, 1);
+			container.activate(parent, 1);
+			container.activate(ctx, 1);
+			container.activate(rcb, 1);
+		}
+		removeMetadata(container);
+		removeArchiveMetadata(container);
+		synchronized(this) {
+			// So a SingleKeyListener isn't created.
+			finished = true;
+		}
 		if(parent.isCancelled()) {
 			if(logMINOR)
 				Logger.minor(this, "Parent is cancelled");
 			result.asBucket().free();
-			onFailure(new FetchException(FetchException.CANCELLED), sched);
+			if(persistent) result.asBucket().removeFrom(container);
+			onFailure(new FetchException(FetchException.CANCELLED), false, container, context);
 			return;
 		}
 		if(!decompressors.isEmpty()) {
@@ -197,18 +243,25 @@ public class SingleFileFetcher extends SimpleSingleFileFetcher {
 					long maxLen = Math.max(ctx.maxTempLength, ctx.maxOutputLength);
 					if(logMINOR)
 						Logger.minor(this, "Decompressing "+data+" size "+data.size()+" max length "+maxLen);
-					data = c.decompress(data, ctx.bucketFactory, maxLen, maxLen * 4, decompressors.isEmpty() ? returnBucket : null);
+					Bucket out = decompressors.isEmpty() ? returnBucket : null;
+					data = c.decompress(data, context.getBucketFactory(parent.persistent()), maxLen, maxLen * 4, out);
 					if(logMINOR)
 						Logger.minor(this, "Decompressed to "+data+" size "+data.size());
 				} catch (IOException e) {
-					onFailure(new FetchException(FetchException.BUCKET_ERROR, e), sched);
+					onFailure(new FetchException(FetchException.BUCKET_ERROR, e), false, container, context);
 					return;
 				} catch (CompressionOutputSizeException e) {
-					onFailure(new FetchException(FetchException.TOO_BIG, e.estimatedSize, (rcb == parent), result.getMimeType()), sched);
+					if(logMINOR)
+						Logger.minor(this, "Too big: limit="+ctx.maxOutputLength+" temp="+ctx.maxTempLength);
+					onFailure(new FetchException(FetchException.TOO_BIG, e.estimatedSize, (rcb == parent), result.getMimeType()), false, container, context);
 					return;
 				}
 			}
 			result = new FetchResult(result, data);
+			if(persistent) {
+				container.store(this);
+				container.store(decompressors);
+			}
 		}
 		if((!ctx.ignoreTooManyPathComponents) && (!metaStrings.isEmpty()) && isFinal) {
 			// Some meta-strings left
@@ -217,7 +270,7 @@ public class SingleFileFetcher extends SimpleSingleFileFetcher {
 				// It would be useful to be able to fetch the data ...
 				// On the other hand such inserts could cause unpredictable results?
 				// Would be useful to make a redirect to the key we actually fetched.
-				rcb.onFailure(new FetchException(FetchException.INVALID_METADATA, "Invalid metadata: too many path components in redirects", thisKey), this);
+				rcb.onFailure(new FetchException(FetchException.INVALID_METADATA, "Invalid metadata: too many path components in redirects", thisKey), this, container, context);
 			} else {
 				// TOO_MANY_PATH_COMPONENTS
 				// report to user
@@ -226,15 +279,17 @@ public class SingleFileFetcher extends SimpleSingleFileFetcher {
 				}
 				FreenetURI tryURI = uri;
 				tryURI = tryURI.dropLastMetaStrings(metaStrings.size());
-				rcb.onFailure(new FetchException(FetchException.TOO_MANY_PATH_COMPONENTS, result.size(), (rcb == parent), result.getMimeType(), tryURI), this);
+				rcb.onFailure(new FetchException(FetchException.TOO_MANY_PATH_COMPONENTS, result.size(), (rcb == parent), result.getMimeType(), tryURI), this, container, context);
 			}
 			result.asBucket().free();
+			if(persistent) result.asBucket().removeFrom(container);
 			return;
 		} else if(result.size() > ctx.maxOutputLength) {
-			rcb.onFailure(new FetchException(FetchException.TOO_BIG, result.size(), (rcb == parent), result.getMimeType()), this);
+			rcb.onFailure(new FetchException(FetchException.TOO_BIG, result.size(), (rcb == parent), result.getMimeType()), this, container, context);
 			result.asBucket().free();
+			if(persistent) result.asBucket().removeFrom(container);
 		} else {
-			rcb.onSuccess(result, this);
+			rcb.onSuccess(result, this, container, context);
 		}
 	}
 
@@ -247,7 +302,37 @@ public class SingleFileFetcher extends SimpleSingleFileFetcher {
 	 * @throws ArchiveFailureException
 	 * @throws ArchiveRestartException
 	 */
-	private synchronized void handleMetadata() throws FetchException, MetadataParseException, ArchiveFailureException, ArchiveRestartException {
+	private synchronized void handleMetadata(final ObjectContainer container, final ClientContext context) throws FetchException, MetadataParseException, ArchiveFailureException, ArchiveRestartException {
+		if(persistent) {
+			container.activate(this, 2);
+			// ,1's are probably redundant
+			container.activate(metadata, 100);
+			container.activate(metaStrings, Integer.MAX_VALUE);
+			container.activate(thisKey, 5);
+			container.activate(ctx, 2); // for event producer and allowed mime types
+			if(ah != null)
+				ah.activateForExecution(container);
+			container.activate(parent, 1);
+			container.activate(actx, 5);
+			container.activate(clientMetadata, 5);
+			container.activate(rcb, 1);
+			container.activate(returnBucket, 5);
+		}
+		if(uri == null) {
+			if(container != null) {
+				if(container.ext().isActive(this))
+					throw new NullPointerException("SFI "+this+" is active and uri is null!");
+				else
+					throw new NullPointerException("SFI "+this+" is not active!");
+			} else
+				throw new NullPointerException("uri = null on transient SFI?? "+this);
+		}
+		synchronized(this) {
+			if(cancelled)
+				return;
+			// So a SingleKeyListener isn't created.
+			finished = true;
+		}
 		while(true) {
 			if(metadata.isSimpleManifest()) {
 				if(logMINOR) Logger.minor(this, "Is simple manifest");
@@ -256,14 +341,34 @@ public class SingleFileFetcher extends SimpleSingleFileFetcher {
 					throw new FetchException(FetchException.NOT_ENOUGH_PATH_COMPONENTS, -1, false, null, uri.addMetaStrings(new String[] { "" }));
 				else name = removeMetaString();
 				// Since metadata is a document, we just replace metadata here
-				if(logMINOR) Logger.minor(this, "Next meta-string: "+name);
+				if(logMINOR) Logger.minor(this, "Next meta-string: "+name+" length "+name.length()+" for "+this);
 				if(name == null) {
-					metadata = metadata.getDefaultDocument();
+					if(!persistent) {
+						metadata = metadata.getDefaultDocument();
+					} else {
+						Metadata newMeta = metadata.grabDefaultDocument();
+						metadata.removeFrom(container);
+						metadata = newMeta;
+						container.store(this);
+						container.store(metaStrings);
+					}
 					if(metadata == null)
 						throw new FetchException(FetchException.NOT_ENOUGH_PATH_COMPONENTS, -1, false, null, uri.addMetaStrings(new String[] { "" }));
 				} else {
-					metadata = metadata.getDocument(name);
-					thisKey = thisKey.pushMetaString(name);
+					if(!persistent) {
+						metadata = metadata.getDocument(name);
+						thisKey = thisKey.pushMetaString(name);
+					} else {
+						Metadata newMeta = metadata.grabDocument(name);
+						metadata.removeFrom(container);
+						metadata = newMeta;
+						FreenetURI oldThisKey = thisKey;
+						thisKey = thisKey.pushMetaString(name);
+						container.store(this);
+						container.store(metaStrings);
+						container.store(thisKey);
+						oldThisKey.removeFrom(container);
+					}
 					if(metadata == null)
 						throw new FetchException(FetchException.NOT_IN_ARCHIVE, "can't find "+name);
 				}
@@ -273,6 +378,7 @@ public class SingleFileFetcher extends SimpleSingleFileFetcher {
 				if(metaStrings.isEmpty() && ctx.returnZIPManifests) {
 					// Just return the archive, whole.
 					metadata.setSimpleRedirect();
+					if(persistent) container.store(metadata);
 					continue;
 				}
 				// First we need the archive metadata.
@@ -280,39 +386,72 @@ public class SingleFileFetcher extends SimpleSingleFileFetcher {
 				// It's more efficient to keep the existing ah if we can, and it is vital in
 				// the case of binary blobs.
 				if(ah == null || !ah.getKey().equals(thisKey))
-					ah = (ArchiveStoreContext) ctx.archiveManager.makeHandler(thisKey, metadata.getArchiveType(), metadata.getCompressionCodec(), false, 
-							(parent instanceof ClientGetter ? ((ClientGetter)parent).collectingBinaryBlob() : false));
+					ah = context.archiveManager.makeHandler(thisKey, metadata.getArchiveType(), metadata.getCompressionCodec(),
+							(parent instanceof ClientGetter ? ((ClientGetter)parent).collectingBinaryBlob() : false), persistent);
 				archiveMetadata = metadata;
+				metadata = null; // Copied to archiveMetadata, so do not need to clear it
 				// ah is set. This means we are currently handling an archive.
 				Bucket metadataBucket;
-				metadataBucket = ah.getMetadata(actx, null, recursionLevel+1, true);
+				metadataBucket = ah.getMetadata(actx, null, recursionLevel+1, true, context.archiveManager);
 				if(metadataBucket != null) {
 					try {
 						metadata = Metadata.construct(metadataBucket);
+						metadataBucket.free();
 					} catch (IOException e) {
 						// Bucket error?
 						throw new FetchException(FetchException.BUCKET_ERROR, e);
 					}
+					if(persistent) container.store(this);
 				} else {
+					final boolean persistent = this.persistent;
 					fetchArchive(false, archiveMetadata, ArchiveManager.METADATA_NAME, new ArchiveExtractCallback() {
-						public void gotBucket(Bucket data) {
+						public void gotBucket(Bucket data, ObjectContainer container, ClientContext context) {
+							if(persistent)
+								container.activate(SingleFileFetcher.this, 1);
+							if(logMINOR) Logger.minor(this, "gotBucket on "+SingleFileFetcher.this+" persistent="+persistent);
 							try {
 								metadata = Metadata.construct(data);
+								data.free();
+								if(persistent) data.removeFrom(container);
+								wrapHandleMetadata(true, container, context);
 							} catch (MetadataParseException e) {
 								// Invalid metadata
-								onFailure(new FetchException(FetchException.INVALID_METADATA, e), sched);
+								onFailure(new FetchException(FetchException.INVALID_METADATA, e), false, container, context);
 								return;
 							} catch (IOException e) {
 								// Bucket error?
-								onFailure(new FetchException(FetchException.BUCKET_ERROR, e), sched);
+								onFailure(new FetchException(FetchException.BUCKET_ERROR, e), false, container, context);
 								return;
 							}
-							wrapHandleMetadata(true);
+							if(persistent)
+								container.deactivate(SingleFileFetcher.this, 1);
 						}
-						public void notInArchive() {
-							onFailure(new FetchException(FetchException.INTERNAL_ERROR, "No metadata in container! Cannot happen as ArchiveManager should synthesise some!"), sched);
+						public void notInArchive(ObjectContainer container, ClientContext context) {
+							if(persistent)
+								container.activate(SingleFileFetcher.this, 1);
+							onFailure(new FetchException(FetchException.INTERNAL_ERROR, "No metadata in container! Cannot happen as ArchiveManager should synthesise some!"), false, container, context);
+							if(persistent)
+								container.deactivate(SingleFileFetcher.this, 1);
 						}
-					}); // will result in this function being called again
+						public void onFailed(ArchiveRestartException e, ObjectContainer container, ClientContext context) {
+							if(persistent)
+								container.activate(SingleFileFetcher.this, 1);
+							SingleFileFetcher.this.onFailure(new FetchException(e), false, container, context);
+							if(persistent)
+								container.deactivate(SingleFileFetcher.this, 1);
+						}
+						public void onFailed(ArchiveFailureException e, ObjectContainer container, ClientContext context) {
+							if(persistent)
+								container.activate(SingleFileFetcher.this, 1);
+							SingleFileFetcher.this.onFailure(new FetchException(e), false, container, context);
+							if(persistent)
+								container.deactivate(SingleFileFetcher.this, 1);
+						}
+						public void removeFrom(ObjectContainer container) {
+							container.delete(this);
+						}
+					}, container, context); // will result in this function being called again
+					if(persistent) container.store(this);
 					return;
 				}
 				metadataBucket.free();
@@ -320,8 +459,9 @@ public class SingleFileFetcher extends SimpleSingleFileFetcher {
 			} else if(metadata.isArchiveInternalRedirect()) {
 				if(logMINOR) Logger.minor(this, "Is archive-internal redirect");
 				clientMetadata.mergeNoOverwrite(metadata.getClientMetadata());
+				if(persistent) container.store(clientMetadata);
 				String mime = clientMetadata.getMIMEType();
-				if(mime != null) rcb.onExpectedMIME(mime);
+				if(mime != null) rcb.onExpectedMIME(mime, container);
 				if(metaStrings.isEmpty() && isFinal && clientMetadata.getMIMETypeNoParams() != null && ctx.allowedMIMETypes != null &&
 						!ctx.allowedMIMETypes.contains(clientMetadata.getMIMETypeNoParams())) {
 					throw new FetchException(FetchException.WRONG_MIME_TYPE, -1, false, clientMetadata.getMIMEType());
@@ -331,13 +471,13 @@ public class SingleFileFetcher extends SimpleSingleFileFetcher {
 					throw new FetchException(FetchException.UNKNOWN_METADATA, "Archive redirect not in an archive manifest");
 				String filename = metadata.getZIPInternalName();
 				if(logMINOR) Logger.minor(this, "Fetching "+filename);
-				Bucket dataBucket = ah.get(filename, actx, null, recursionLevel+1, true);
+				Bucket dataBucket = ah.get(filename, actx, null, recursionLevel+1, true, context.archiveManager);
 				if(dataBucket != null) {
 					if(logMINOR) Logger.minor(this, "Returning data");
 					final Bucket out;
 					try {
 						// Data will not be freed until client is finished with it.
-						if(returnBucket != null) {
+						if(returnBucket != null || persistent) {
 							out = returnBucket;
 							BucketTools.copy(dataBucket, out);
 							dataBucket.free();
@@ -348,11 +488,7 @@ public class SingleFileFetcher extends SimpleSingleFileFetcher {
 						throw new FetchException(FetchException.BUCKET_ERROR);
 					}
 					// Return the data
-					ctx.executor.execute(new Runnable() {
-						public void run() {
-							onSuccess(new FetchResult(clientMetadata, out), sched);
-						}
-					}, "SingleFileFetcher onSuccess callback for "+this);
+					onSuccess(new FetchResult(clientMetadata, out), container, context);
 					
 					return;
 				} else {
@@ -360,30 +496,61 @@ public class SingleFileFetcher extends SimpleSingleFileFetcher {
 					// Metadata cannot contain pointers to files which don't exist.
 					// We enforce this in ArchiveHandler.
 					// Therefore, the archive needs to be fetched.
+					final boolean persistent = this.persistent;
 					fetchArchive(true, archiveMetadata, filename, new ArchiveExtractCallback() {
-						public void gotBucket(Bucket data) {
+						public void gotBucket(Bucket data, ObjectContainer container, ClientContext context) {
+							if(persistent)
+								container.activate(SingleFileFetcher.this, 1);
 							if(logMINOR) Logger.minor(this, "Returning data");
 							Bucket out;
 							try {
 								// Data will not be freed until client is finished with it.
 								if(returnBucket != null) {
+									if(persistent)
+										container.activate(returnBucket, 5);
 									out = returnBucket;
 									BucketTools.copy(data, out);
 									data.free();
+									if(persistent)
+										data.removeFrom(container);
 								} else {
 									out = data;
 								}
 							} catch (IOException e) {
-								onFailure(new FetchException(FetchException.BUCKET_ERROR), sched);
+								onFailure(new FetchException(FetchException.BUCKET_ERROR), false, container, context);
 								return;
 							}
 							// Return the data
-							onSuccess(new FetchResult(clientMetadata, out), sched);
+							onSuccess(new FetchResult(clientMetadata, out), container, context);
+							if(persistent)
+								container.deactivate(SingleFileFetcher.this, 1);
 						}
-						public void notInArchive() {
-							onFailure(new FetchException(FetchException.NOT_IN_ARCHIVE), sched);
+						public void notInArchive(ObjectContainer container, ClientContext context) {
+							if(persistent)
+								container.activate(SingleFileFetcher.this, 1);
+							onFailure(new FetchException(FetchException.NOT_IN_ARCHIVE), false, container, context);
+							if(persistent)
+								container.deactivate(SingleFileFetcher.this, 1);
 						}
-					});
+						public void onFailed(ArchiveRestartException e, ObjectContainer container, ClientContext context) {
+							if(persistent)
+								container.activate(SingleFileFetcher.this, 1);
+							SingleFileFetcher.this.onFailure(new FetchException(e), false, container, context);
+							if(persistent)
+								container.deactivate(SingleFileFetcher.this, 1);
+						}
+						public void onFailed(ArchiveFailureException e, ObjectContainer container, ClientContext context) {
+							if(persistent)
+								container.activate(SingleFileFetcher.this, 1);
+							SingleFileFetcher.this.onFailure(new FetchException(e), false, container, context);
+							if(persistent)
+								container.deactivate(SingleFileFetcher.this, 1);
+						}
+						public void removeFrom(ObjectContainer container) {
+							container.delete(this);
+						}
+					}, container, context);
+					removeMetadata(container);
 					// Will call back into this function when it has been fetched.
 					return;
 				}
@@ -391,27 +558,34 @@ public class SingleFileFetcher extends SimpleSingleFileFetcher {
 				if(logMINOR) Logger.minor(this, "Is multi-level metadata");
 				// Fetch on a second SingleFileFetcher, like with archives.
 				metadata.setSimpleRedirect();
-				final SingleFileFetcher f = new SingleFileFetcher(this, metadata, new MultiLevelMetadataCallback(), ctx);
+				final SingleFileFetcher f = new SingleFileFetcher(this, persistent, false, metadata, new MultiLevelMetadataCallback(), ctx, container, context);
 				// Clear our own metadata so it can be garbage collected, it will be replaced by whatever is fetched.
+				// The new fetcher has our metadata so we don't need to removeMetadata().
 				this.metadata = null;
-				ctx.ticker.queueTimedJob(new Runnable() {
-					public void run() {
-						f.wrapHandleMetadata(true);
-					}
-				}, 0);
+				if(persistent) container.store(this);
+				if(persistent) container.store(f);
+				
+				// We must transition to the sub-fetcher so that if the request is cancelled, it will get deleted.
+				parent.onTransition(this, f, container);
+				
+				f.wrapHandleMetadata(true, container, context);
+				if(persistent) container.deactivate(f, 1);
 				return;
 			} else if(metadata.isSingleFileRedirect()) {
 				if(logMINOR) Logger.minor(this, "Is single-file redirect");
 				clientMetadata.mergeNoOverwrite(metadata.getClientMetadata()); // even splitfiles can have mime types!
+				if(persistent) container.store(clientMetadata);
 				String mime = clientMetadata.getMIMEType();
-				if(mime != null) rcb.onExpectedMIME(mime);
+				if(mime != null) rcb.onExpectedMIME(mime, container);
 
 				String mimeType = clientMetadata.getMIMETypeNoParams();
 				if(mimeType != null && ArchiveManager.ARCHIVE_TYPE.isUsableArchiveType(mimeType) && metaStrings.size() > 0) {
 					// Looks like an implicit archive, handle as such
 					metadata.setArchiveManifest();
+					if(persistent) container.store(metadata);
 					// Pick up MIME type from inside archive
 					clientMetadata.clear();
+					if(persistent) container.store(clientMetadata);
 					if(logMINOR) Logger.minor(this, "Handling implicit container... (redirect)");
 					continue;
 				}
@@ -440,36 +614,41 @@ public class SingleFileFetcher extends SimpleSingleFileFetcher {
 				} catch (MalformedURLException e) {
 					throw new FetchException(FetchException.INVALID_URI, e);
 				}
-				LinkedList newMetaStrings = newURI.listMetaStrings();
+				ArrayList<String> newMetaStrings = newURI.listMetaStrings();
 				
 				// Move any new meta strings to beginning of our list of remaining meta strings
 				while(!newMetaStrings.isEmpty()) {
-					Object o = newMetaStrings.removeLast();
-					metaStrings.addFirst(o);
+					String o = newMetaStrings.remove(newMetaStrings.size()-1);
+					metaStrings.add(0, o);
 					addedMetaStrings++;
 				}
 
-				final SingleFileFetcher f = new SingleFileFetcher(parent, rcb, clientMetadata, redirectedKey, metaStrings, this.uri, addedMetaStrings, ctx, actx, ah, archiveMetadata, maxRetries, recursionLevel, false, token, true, returnBucket, isFinal);
+				final SingleFileFetcher f = new SingleFileFetcher(parent, rcb, clientMetadata, redirectedKey, metaStrings, this.uri, addedMetaStrings, ctx, deleteFetchContext, actx, ah, archiveMetadata, maxRetries, recursionLevel, false, token, true, returnBucket, isFinal, container, context);
+				this.deleteFetchContext = false;
 				if((redirectedKey instanceof ClientCHK) && !((ClientCHK)redirectedKey).isMetadata())
-					rcb.onBlockSetFinished(this);
+					rcb.onBlockSetFinished(this, container, context);
 				if(metadata.isCompressed()) {
 					COMPRESSOR_TYPE codec = metadata.getCompressionCodec();
 					f.addDecompressor(codec);
 				}
-				parent.onTransition(this, f);
-				ctx.slowSerialExecutor[parent.priorityClass].execute(new Runnable() {
-					public void run() {
-						f.schedule();
-					}
-				}, "Schedule "+this);
+				parent.onTransition(this, f, container);
+				if(persistent) {
+					container.store(metaStrings);
+					container.store(f); // Store *before* scheduling to avoid activation problems.
+					container.store(this);
+				}
+				f.schedule(container, context);
 				// All done! No longer our problem!
+				archiveMetadata = null; // passed on
+				if(persistent) removeFrom(container, context);
 				return;
 			} else if(metadata.isSplitfile()) {
 				if(logMINOR) Logger.minor(this, "Fetching splitfile");
 				
 				clientMetadata.mergeNoOverwrite(metadata.getClientMetadata()); // even splitfiles can have mime types!
+				if(persistent) container.store(clientMetadata);
 				String mime = clientMetadata.getMIMEType();
-				if(mime != null) rcb.onExpectedMIME(mime);
+				if(mime != null) rcb.onExpectedMIME(mime, container);
 				
 				String mimeType = clientMetadata.getMIMETypeNoParams();
 				if(mimeType != null && ArchiveManager.ARCHIVE_TYPE.isUsableArchiveType(mimeType) && metaStrings.size() > 0) {
@@ -477,13 +656,20 @@ public class SingleFileFetcher extends SimpleSingleFileFetcher {
 					metadata.setArchiveManifest();
 					// Pick up MIME type from inside archive
 					clientMetadata.clear();
+					if(persistent) {
+						container.store(metadata);
+						container.store(clientMetadata);
+					}
 					if(logMINOR) Logger.minor(this, "Handling implicit container... (splitfile)");
 					continue;
 				}
 				
 				if(metaStrings.isEmpty() && isFinal && mimeType != null && ctx.allowedMIMETypes != null &&
 						!ctx.allowedMIMETypes.contains(mimeType)) {
-					throw new FetchException(FetchException.WRONG_MIME_TYPE, metadata.uncompressedDataLength(), false, clientMetadata.getMIMEType());
+					// Just in case...
+					long len = metadata.uncompressedDataLength();
+					if(persistent) removeFrom(container, context);
+					throw new FetchException(FetchException.WRONG_MIME_TYPE, len, false, clientMetadata.getMIMEType());
 				}
 				
 				// Splitfile (possibly compressed)
@@ -491,6 +677,8 @@ public class SingleFileFetcher extends SimpleSingleFileFetcher {
 				if(metadata.isCompressed()) {
 					COMPRESSOR_TYPE codec = metadata.getCompressionCodec();
 					addDecompressor(codec);
+					if(persistent)
+						container.store(decompressors);
 				}
 				
 				if(isFinal && !ctx.ignoreTooManyPathComponents) {
@@ -501,14 +689,16 @@ public class SingleFileFetcher extends SimpleSingleFileFetcher {
 							// It would be useful to be able to fetch the data ...
 							// On the other hand such inserts could cause unpredictable results?
 							// Would be useful to make a redirect to the key we actually fetched.
-							rcb.onFailure(new FetchException(FetchException.INVALID_METADATA, "Invalid metadata: too many path components in redirects", thisKey), this);
+							rcb.onFailure(new FetchException(FetchException.INVALID_METADATA, "Invalid metadata: too many path components in redirects", thisKey), this, container, context);
 						} else {
 							// TOO_MANY_PATH_COMPONENTS
 							// report to user
 							FreenetURI tryURI = uri;
 							tryURI = tryURI.dropLastMetaStrings(metaStrings.size());
-							rcb.onFailure(new FetchException(FetchException.TOO_MANY_PATH_COMPONENTS, metadata.uncompressedDataLength(), (rcb == parent), clientMetadata.getMIMEType(), tryURI), this);
+							rcb.onFailure(new FetchException(FetchException.TOO_MANY_PATH_COMPONENTS, metadata.uncompressedDataLength(), (rcb == parent), clientMetadata.getMIMEType(), tryURI), this, container, context);
 						}
+						// Just in case...
+						if(persistent) removeFrom(container, context);
 						return;
 					}
 				} else
@@ -520,41 +710,60 @@ public class SingleFileFetcher extends SimpleSingleFileFetcher {
 				
 				if((len > ctx.maxOutputLength) ||
 						(len > ctx.maxTempLength)) {
-					
-					throw new FetchException(FetchException.TOO_BIG, len, isFinal && decompressors.size() <= (metadata.isCompressed() ? 1 : 0), clientMetadata.getMIMEType());
+					// Just in case...
+					boolean compressed = metadata.isCompressed();
+					if(persistent) removeFrom(container, context);
+					throw new FetchException(FetchException.TOO_BIG, len, isFinal && decompressors.size() <= (compressed ? 1 : 0), clientMetadata.getMIMEType());
 				}
 				
-				SplitFileFetcher sf = new SplitFileFetcher(metadata, rcb, parent, ctx, 
-						decompressors, clientMetadata, actx, recursionLevel, returnBucket, token);
-				parent.onTransition(this, sf);
-				sf.scheduleOffThread();
-				rcb.onBlockSetFinished(this);
+				SplitFileFetcher sf = new SplitFileFetcher(metadata, rcb, parent, ctx, deleteFetchContext, 
+						decompressors, clientMetadata, actx, recursionLevel, returnBucket, token, container, context);
+				this.deleteFetchContext = false;
+				if(persistent) {
+					container.store(sf); // Avoid problems caused by storing a deactivated sf
+					if(!container.ext().isActive(parent)) {
+						container.activate(parent, 1);
+						Logger.error(this, "Not active: "+parent);
+					}
+				}
+				parent.onTransition(this, sf, container);
+				try {
+					sf.schedule(container, context);
+				} catch (KeyListenerConstructionException e) {
+					onFailure(e.getFetchException(), false, container, context);
+					if(persistent) container.deactivate(sf, 1);
+					return;
+				}
+				if(persistent) container.deactivate(sf, 1);
+				rcb.onBlockSetFinished(this, container, context);
 				// Clear our own metadata, we won't need it any more.
+				// Note that SplitFileFetcher() above will have used the keys from the metadata,
+				// and will have removed them from it so they don't get removed here.
+				// Lack of garbage collection in db4o is a PITA!
 				// For multi-level metadata etc see above.
-				metadata = null; 
-				
-				// SplitFile will now run.
-				// Then it will return data to rcd.
-				// We are now out of the loop. Yay!
+				if(persistent) removeFrom(container, context);
 				return;
 			} else {
 				Logger.error(this, "Don't know what to do with metadata: "+metadata);
+				removeMetadata(container);
 				throw new FetchException(FetchException.UNKNOWN_METADATA);
 			}
 		}
 	}
 
 	private String removeMetaString() {
-		String name = (String) metaStrings.removeFirst();
+		String name = (String) metaStrings.remove(0);
 		if(addedMetaStrings > 0) addedMetaStrings--;
 		return name;
 	}
 
 	private void addDecompressor(COMPRESSOR_TYPE codec) {
-		decompressors.addLast(codec);
+		if(logMINOR)
+			Logger.minor(this, "Adding decompressor: "+codec+" on "+this, new Exception("debug"));
+		decompressors.add(codec);
 	}
 
-	private void fetchArchive(boolean forData, Metadata meta, String element, ArchiveExtractCallback callback) throws FetchException, MetadataParseException, ArchiveFailureException, ArchiveRestartException {
+	private void fetchArchive(boolean forData, Metadata meta, String element, ArchiveExtractCallback callback, final ObjectContainer container, ClientContext context) throws FetchException, MetadataParseException, ArchiveFailureException, ArchiveRestartException {
 		if(logMINOR) Logger.minor(this, "fetchArchive()");
 		// Fetch the archive
 		// How?
@@ -565,89 +774,175 @@ public class SingleFileFetcher extends SimpleSingleFileFetcher {
 		Metadata newMeta = (Metadata) meta.clone();
 		newMeta.setSimpleRedirect();
 		final SingleFileFetcher f;
-		f = new SingleFileFetcher(this, newMeta, new ArchiveFetcherCallback(forData, element, callback), new FetchContext(ctx, FetchContext.SET_RETURN_ARCHIVES, true));
+		f = new SingleFileFetcher(this, persistent, true, newMeta, new ArchiveFetcherCallback(forData, element, callback), new FetchContext(ctx, FetchContext.SET_RETURN_ARCHIVES, true, null), container, context);
+		if(persistent) container.store(f);
 		if(logMINOR) Logger.minor(this, "fetchArchive(): "+f);
-		ctx.executor.execute(new Runnable() {
-			public void run() {
-				// Fetch the archive. The archive fetcher callback will unpack it, and either call the element 
-				// callback, or just go back around handleMetadata() on this, which will see that the data is now
-				// available.
-				f.wrapHandleMetadata(true);
-			}
-		}, "Fetching archive for "+this);
+		// Fetch the archive. The archive fetcher callback will unpack it, and either call the element 
+		// callback, or just go back around handleMetadata() on this, which will see that the data is now
+		// available.
+		
+		// We need to transition here, so that everything gets deleted if we are cancelled during the archive fetch phase.
+		if(persistent) container.activate(parent, 1);
+		parent.onTransition(this, f, container);
+		
+		f.wrapHandleMetadata(true, container, context);
+		if(persistent) container.deactivate(f, 1);
 	}
 
 	/**
 	 * Call handleMetadata(), and deal with any resulting exceptions
 	 */
-	private void wrapHandleMetadata(boolean notFinalizedSize) {
-		try {
-			handleMetadata();
-		} catch (MetadataParseException e) {
-			onFailure(new FetchException(FetchException.INVALID_METADATA, e), sched);
-		} catch (FetchException e) {
-			if(notFinalizedSize)
-				e.setNotFinalizedSize();
-			onFailure(e, sched);
-		} catch (ArchiveFailureException e) {
-			onFailure(new FetchException(e), sched);
-		} catch (ArchiveRestartException e) {
-			onFailure(new FetchException(e), sched);
+	private void wrapHandleMetadata(final boolean notFinalizedSize, ObjectContainer container, final ClientContext context) {
+		if(!persistent)
+			innerWrapHandleMetadata(notFinalizedSize, container, context);
+		else {
+			if(!context.jobRunner.onDatabaseThread())
+				context.jobRunner.queue(new DBJob() {
+					public void run(ObjectContainer container, ClientContext context) {
+						if(container.ext().isActive(SingleFileFetcher.this))
+							Logger.error(this, "ALREADY ACTIVE in SFF callback: "+SingleFileFetcher.this);
+						container.activate(SingleFileFetcher.this, 1);
+						innerWrapHandleMetadata(notFinalizedSize, container, context);
+						container.deactivate(SingleFileFetcher.this, 1);
+					}
+				}, parent.getPriorityClass(), false);
+			else
+				innerWrapHandleMetadata(notFinalizedSize, container, context);
 		}
 	}
 	
+	protected void innerWrapHandleMetadata(boolean notFinalizedSize, ObjectContainer container, ClientContext context) {
+		try {
+			handleMetadata(container, context);
+		} catch (MetadataParseException e) {
+			onFailure(new FetchException(FetchException.INVALID_METADATA, e), false, container, context);
+		} catch (FetchException e) {
+			if(notFinalizedSize)
+				e.setNotFinalizedSize();
+			onFailure(e, false, container, context);
+		} catch (ArchiveFailureException e) {
+			onFailure(new FetchException(e), false, container, context);
+		} catch (ArchiveRestartException e) {
+			onFailure(new FetchException(e), false, container, context);
+		}
+	}
+
 	class ArchiveFetcherCallback implements GetCompletionCallback {
 
 		private final boolean wasFetchingFinalData;
 		private final String element;
 		private final ArchiveExtractCallback callback;
+		/** For activation we need to know whether we are persistent even though the parent may not have been activated yet */
+		private final boolean persistent;
 		
 		ArchiveFetcherCallback(boolean wasFetchingFinalData, String element, ArchiveExtractCallback cb) {
 			this.wasFetchingFinalData = wasFetchingFinalData;
 			this.element = element;
 			this.callback = cb;
+			this.persistent = SingleFileFetcher.this.persistent;
 		}
 		
-		public void onSuccess(FetchResult result, ClientGetState state) {
+		public void onSuccess(FetchResult result, ClientGetState state, ObjectContainer container, ClientContext context) {
+			if(!persistent) {
+				// Run directly - we are running on some thread somewhere, don't worry about it.
+				innerSuccess(result, container, context);
+			} else {
+				boolean wasActive;
+				// We are running on the database thread.
+				// Add a tag, unpack on a separate thread, copy the data to a persistent bucket, then schedule on the database thread,
+				// remove the tag, and call the callback.
+				wasActive = container.ext().isActive(SingleFileFetcher.this);
+				if(!wasActive)
+					container.activate(SingleFileFetcher.this, 1);
+				container.activate(parent, 1);
+				parent.onTransition(state, SingleFileFetcher.this, container);
+				if(persistent)
+					container.activate(actx, 1);
+				ah.activateForExecution(container);
+				ah.extractPersistentOffThread(result.asBucket(), true, actx, element, callback, container, context);
+				if(!wasActive)
+					container.deactivate(SingleFileFetcher.this, 1);
+				if(state != null)
+					state.removeFrom(container, context);
+				container.delete(this);
+			}
+		}
+
+		private void innerSuccess(FetchResult result, ObjectContainer container, ClientContext context) {
 			try {
-				ah.extractToCache(result.asBucket(), actx, element, callback);
+				ah.extractToCache(result.asBucket(), actx, element, callback, context.archiveManager, container, context);
 			} catch (ArchiveFailureException e) {
-				SingleFileFetcher.this.onFailure(new FetchException(e), sched);
+				SingleFileFetcher.this.onFailure(new FetchException(e), false, container, context);
 				return;
 			} catch (ArchiveRestartException e) {
-				SingleFileFetcher.this.onFailure(new FetchException(e), sched);
+				SingleFileFetcher.this.onFailure(new FetchException(e), false, container, context);
 				return;
 			} finally {
 				result.asBucket().free();
+				if(persistent) result.asBucket().removeFrom(container);
 			}
 			if(callback != null) return;
-			wrapHandleMetadata(true);
+			wrapHandleMetadata(true, container, context);
 		}
 
-		public void onFailure(FetchException e, ClientGetState state) {
+		public void onFailure(FetchException e, ClientGetState state, ObjectContainer container, ClientContext context) {
+			boolean wasActive = true;
+			if(persistent) {
+				wasActive = container.ext().isActive(SingleFileFetcher.this);
+				if(!wasActive)
+					container.activate(SingleFileFetcher.this, 1);
+			}
 			// Force fatal as the fetcher is presumed to have made a reasonable effort.
-			SingleFileFetcher.this.onFailure(e, true, sched);
-		}
-
-		public void onBlockSetFinished(ClientGetState state) {
-			if(wasFetchingFinalData) {
-				rcb.onBlockSetFinished(SingleFileFetcher.this);
+			SingleFileFetcher.this.onFailure(e, true, container, context);
+			if(!wasActive)
+				container.deactivate(SingleFileFetcher.this, 1);
+			if(persistent) {
+				if(state != null)
+					state.removeFrom(container, context);
+				container.delete(this);
+				callback.removeFrom(container);
 			}
 		}
 
-		public void onTransition(ClientGetState oldState, ClientGetState newState) {
+		public void onBlockSetFinished(ClientGetState state, ObjectContainer container, ClientContext context) {
+			boolean wasActive = true;
+			if(persistent) {
+				wasActive = container.ext().isActive(SingleFileFetcher.this);
+				if(!wasActive)
+					container.activate(SingleFileFetcher.this, 1);
+			}
+			if(persistent)
+				container.activate(rcb, 1);
+			if(wasFetchingFinalData) {
+				rcb.onBlockSetFinished(SingleFileFetcher.this, container, context);
+			}
+			if(!wasActive)
+				container.deactivate(SingleFileFetcher.this, 1);
+		}
+
+		public void onTransition(ClientGetState oldState, ClientGetState newState, ObjectContainer container) {
 			// Ignore
 		}
 
-		public void onExpectedMIME(String mime) {
+		public void onExpectedMIME(String mime, ObjectContainer container) {
 			// Ignore
 		}
 
-		public void onExpectedSize(long size) {
-			rcb.onExpectedSize(size);
+		public void onExpectedSize(long size, ObjectContainer container) {
+			boolean wasActive = true;
+			if(persistent) {
+				wasActive = container.ext().isActive(SingleFileFetcher.this);
+				if(!wasActive)
+					container.activate(SingleFileFetcher.this, 1);
+			}
+			if(persistent)
+				container.activate(rcb, 1);
+			rcb.onExpectedSize(size, container);
+			if(!wasActive)
+				container.deactivate(SingleFileFetcher.this, 1);
 		}
 
-		public void onFinalizedMetadata() {
+		public void onFinalizedMetadata(ObjectContainer container) {
 			// Ignore
 		}
 		
@@ -655,44 +950,96 @@ public class SingleFileFetcher extends SimpleSingleFileFetcher {
 
 	class MultiLevelMetadataCallback implements GetCompletionCallback {
 		
-		public void onSuccess(FetchResult result, ClientGetState state) {
-			try {
-				metadata = Metadata.construct(result.asBucket());
-			} catch (MetadataParseException e) {
-				SingleFileFetcher.this.onFailure(new FetchException(FetchException.INVALID_METADATA, e), sched);
-				return;
-			} catch (IOException e) {
-				// Bucket error?
-				SingleFileFetcher.this.onFailure(new FetchException(FetchException.BUCKET_ERROR, e), sched);
-				return;
-			} finally {
-				result.asBucket().free();
-			}
-			wrapHandleMetadata(true);
+		private final boolean persistent;
+		
+		MultiLevelMetadataCallback() {
+			this.persistent = SingleFileFetcher.this.persistent;
 		}
 		
-		public void onFailure(FetchException e, ClientGetState state) {
+		public void onSuccess(FetchResult result, ClientGetState state, ObjectContainer container, ClientContext context) {
+			boolean wasActive = true;
+			if(persistent) {
+				wasActive = container.ext().isActive(SingleFileFetcher.this);
+				container.activate(SingleFileFetcher.this, 1);
+				container.activate(parent, 1);
+			}
+			try {
+				parent.onTransition(state, SingleFileFetcher.this, container);
+				Metadata meta = Metadata.construct(result.asBucket());
+				removeMetadata(container);
+				synchronized(SingleFileFetcher.this) {
+					metadata = meta;
+				}
+				if(persistent) {
+					container.store(meta);
+					container.store(SingleFileFetcher.this);
+				}
+				wrapHandleMetadata(true, container, context);
+			} catch (MetadataParseException e) {
+				SingleFileFetcher.this.onFailure(new FetchException(FetchException.INVALID_METADATA, e), false, container, context);
+			} catch (IOException e) {
+				// Bucket error?
+				SingleFileFetcher.this.onFailure(new FetchException(FetchException.BUCKET_ERROR, e), false, container, context);
+			} finally {
+				result.asBucket().free();
+				if(persistent)
+					result.asBucket().removeFrom(container);
+			}
+			if(!wasActive)
+				container.deactivate(SingleFileFetcher.this, 1);
+			if(persistent) {
+				if(state != null) state.removeFrom(container, context);
+				container.delete(this);
+			}
+		}
+		
+		public void onFailure(FetchException e, ClientGetState state, ObjectContainer container, ClientContext context) {
+			boolean wasActive = true;
+			if(persistent) {
+				wasActive = container.ext().isActive(SingleFileFetcher.this);
+				container.activate(SingleFileFetcher.this, 1);
+			}
 			// Pass it on; fetcher is assumed to have retried as appropriate already, so this is fatal.
-			SingleFileFetcher.this.onFailure(e, true, sched);
+			SingleFileFetcher.this.onFailure(e, true, container, context);
+			if(!wasActive)
+				container.deactivate(SingleFileFetcher.this, 1);
+			if(persistent) {
+				if(state != null)
+					state.removeFrom(container, context);
+				// Conceivably removeFrom() could deactivate this, so don't recheck
+				container.delete(this);
+			}
 		}
 
-		public void onBlockSetFinished(ClientGetState state) {
+		public void onBlockSetFinished(ClientGetState state, ObjectContainer container, ClientContext context) {
 			// Ignore as we are fetching metadata here
 		}
 
-		public void onTransition(ClientGetState oldState, ClientGetState newState) {
+		public void onTransition(ClientGetState oldState, ClientGetState newState, ObjectContainer container) {
 			// Ignore
 		}
 
-		public void onExpectedMIME(String mime) {
+		public void onExpectedMIME(String mime, ObjectContainer container) {
 			// Ignore
 		}
 
-		public void onExpectedSize(long size) {
-			rcb.onExpectedSize(size);
+		public void onExpectedSize(long size, ObjectContainer container) {
+			boolean wasActive = true;
+			boolean cbWasActive = true;
+			if(persistent) {
+				wasActive = container.ext().isActive(SingleFileFetcher.this);
+				container.activate(SingleFileFetcher.this, 1);
+				cbWasActive = container.ext().isActive(rcb);
+				container.activate(rcb, 1);
+			}
+			rcb.onExpectedSize(size, container);
+			if(!wasActive)
+				container.deactivate(SingleFileFetcher.this, 1);
+			if(!cbWasActive)
+				container.deactivate(rcb, 1);
 		}
 
-		public void onFinalizedMetadata() {
+		public void onFinalizedMetadata(ObjectContainer container) {
 			// Ignore
 		}
 		
@@ -707,56 +1054,56 @@ public class SingleFileFetcher extends SimpleSingleFileFetcher {
 	 * Create a fetcher for a key.
 	 */
 	public static ClientGetState create(ClientRequester requester, GetCompletionCallback cb, 
-			ClientMetadata clientMetadata, FreenetURI uri, FetchContext ctx, ArchiveContext actx, 
+			FreenetURI uri, FetchContext ctx, ArchiveContext actx, 
 			int maxRetries, int recursionLevel, boolean dontTellClientGet, long l, boolean isEssential, 
-			Bucket returnBucket, boolean isFinal) throws MalformedURLException, FetchException {
+			Bucket returnBucket, boolean isFinal, ObjectContainer container, ClientContext context) throws MalformedURLException, FetchException {
 		BaseClientKey key = BaseClientKey.getBaseKey(uri);
-		if((clientMetadata == null || clientMetadata.isTrivial()) && (!uri.hasMetaStrings()) &&
+		if((!uri.hasMetaStrings()) &&
 				ctx.allowSplitfiles == false && ctx.followRedirects == false && 
 				returnBucket == null && key instanceof ClientKey)
-			return new SimpleSingleFileFetcher((ClientKey)key, maxRetries, ctx, requester, cb, isEssential, false, l);
+			return new SimpleSingleFileFetcher((ClientKey)key, maxRetries, ctx, requester, cb, isEssential, false, l, container, context, false);
 		if(key instanceof ClientKey)
-			return new SingleFileFetcher(requester, cb, clientMetadata, (ClientKey)key, uri.listMetaStrings(), uri, 0, ctx, actx, null, null, maxRetries, recursionLevel, dontTellClientGet, l, isEssential, returnBucket, isFinal);
+			return new SingleFileFetcher(requester, cb, null, (ClientKey)key, new ArrayList<String>(uri.listMetaStrings()), uri, 0, ctx, false, actx, null, null, maxRetries, recursionLevel, dontTellClientGet, l, isEssential, returnBucket, isFinal, container, context);
 		else {
-			return uskCreate(requester, cb, clientMetadata, (USK)key, uri.listMetaStrings(), ctx, actx, maxRetries, recursionLevel, dontTellClientGet, l, isEssential, returnBucket, isFinal);
+			return uskCreate(requester, cb, (USK)key, new ArrayList<String>(uri.listMetaStrings()), ctx, actx, maxRetries, recursionLevel, dontTellClientGet, l, isEssential, returnBucket, isFinal, container, context);
 		}
 	}
 
-	private static ClientGetState uskCreate(ClientRequester requester, GetCompletionCallback cb, ClientMetadata clientMetadata, USK usk, LinkedList metaStrings, FetchContext ctx, ArchiveContext actx, int maxRetries, int recursionLevel, boolean dontTellClientGet, long l, boolean isEssential, Bucket returnBucket, boolean isFinal) throws FetchException {
+	private static ClientGetState uskCreate(ClientRequester requester, GetCompletionCallback cb, USK usk, ArrayList<String> metaStrings, FetchContext ctx, ArchiveContext actx, int maxRetries, int recursionLevel, boolean dontTellClientGet, long l, boolean isEssential, Bucket returnBucket, boolean isFinal, ObjectContainer container, ClientContext context) throws FetchException {
 		if(usk.suggestedEdition >= 0) {
 			// Return the latest known version but at least suggestedEdition.
-			long edition = ctx.uskManager.lookup(usk);
+			long edition = context.uskManager.lookup(usk);
 			if(edition <= usk.suggestedEdition) {
 				// Background fetch - start background fetch first so can pick up updates in the datastore during registration.
-				ctx.uskManager.startTemporaryBackgroundFetcher(usk);
-				edition = ctx.uskManager.lookup(usk);
+				context.uskManager.startTemporaryBackgroundFetcher(usk, context);
+				edition = context.uskManager.lookup(usk);
 				if(edition > usk.suggestedEdition) {
 					if(logMINOR) Logger.minor(SingleFileFetcher.class, "Redirecting to edition "+edition);
-					cb.onFailure(new FetchException(FetchException.PERMANENT_REDIRECT, usk.copy(edition).getURI().addMetaStrings(metaStrings)), null);
+					cb.onFailure(new FetchException(FetchException.PERMANENT_REDIRECT, usk.copy(edition).getURI().addMetaStrings(metaStrings)), null, container, context);
 					return null;
 				} else {
 					// Transition to SingleFileFetcher
 					GetCompletionCallback myCB =
-						new USKProxyCompletionCallback(usk, ctx.uskManager, cb);
+						new USKProxyCompletionCallback(usk, cb, requester.persistent());
 					// Want to update the latest known good iff the fetch succeeds.
 					SingleFileFetcher sf = 
-						new SingleFileFetcher(requester, myCB, clientMetadata, usk.getSSK(), metaStrings, 
-								usk.getURI().addMetaStrings(metaStrings), 0, ctx, actx, null, null, maxRetries, recursionLevel, 
-								dontTellClientGet, l, isEssential, returnBucket, isFinal);
+						new SingleFileFetcher(requester, myCB, null, usk.getSSK(), metaStrings, 
+								usk.getURI().addMetaStrings(metaStrings), 0, ctx, false, actx, null, null, maxRetries, recursionLevel, 
+								dontTellClientGet, l, isEssential, returnBucket, isFinal, container, context);
 					return sf;
 				}
 			} else {
-				cb.onFailure(new FetchException(FetchException.PERMANENT_REDIRECT, usk.copy(edition).getURI().addMetaStrings(metaStrings)), null);
+				cb.onFailure(new FetchException(FetchException.PERMANENT_REDIRECT, usk.copy(edition).getURI().addMetaStrings(metaStrings)), null, container, context);
 				return null;
 			}
 		} else {
 			// Do a thorough, blocking search
-			USKFetcher fetcher =
-				ctx.uskManager.getFetcher(usk.copy(-usk.suggestedEdition), ctx, requester, false);
+			USKFetcherTag tag = 
+				context.uskManager.getFetcher(usk.copy(-usk.suggestedEdition), ctx, false, requester.persistent(),
+						new MyUSKFetcherCallback(requester, cb, usk, metaStrings, ctx, actx, maxRetries, recursionLevel, dontTellClientGet, l, returnBucket, requester.persistent()), false, container, context);
 			if(isEssential)
-				requester.addMustSucceedBlocks(1);
-			fetcher.addCallback(new MyUSKFetcherCallback(requester, cb, clientMetadata, usk, metaStrings, ctx, actx, maxRetries, recursionLevel, dontTellClientGet, l, returnBucket));
-			return fetcher;
+				requester.addMustSucceedBlocks(1, container);
+			return tag;
 		}
 	}
 
@@ -764,9 +1111,8 @@ public class SingleFileFetcher extends SimpleSingleFileFetcher {
 
 		final ClientRequester parent;
 		final GetCompletionCallback cb;
-		final ClientMetadata clientMetadata;
 		final USK usk;
-		final LinkedList metaStrings;
+		final ArrayList<String> metaStrings;
 		final FetchContext ctx;
 		final ArchiveContext actx;
 		final int maxRetries;
@@ -774,11 +1120,11 @@ public class SingleFileFetcher extends SimpleSingleFileFetcher {
 		final boolean dontTellClientGet;
 		final long token;
 		final Bucket returnBucket;
+		final boolean persistent;
 		
-		public MyUSKFetcherCallback(ClientRequester requester, GetCompletionCallback cb, ClientMetadata clientMetadata, USK usk, LinkedList metaStrings, FetchContext ctx, ArchiveContext actx, int maxRetries, int recursionLevel, boolean dontTellClientGet, long l, Bucket returnBucket) {
+		public MyUSKFetcherCallback(ClientRequester requester, GetCompletionCallback cb, USK usk, ArrayList<String> metaStrings, FetchContext ctx, ArchiveContext actx, int maxRetries, int recursionLevel, boolean dontTellClientGet, long l, Bucket returnBucket, boolean persistent) {
 			this.parent = requester;
 			this.cb = cb;
-			this.clientMetadata = clientMetadata;
 			this.usk = usk;
 			this.metaStrings = metaStrings;
 			this.ctx = ctx;
@@ -788,29 +1134,48 @@ public class SingleFileFetcher extends SimpleSingleFileFetcher {
 			this.dontTellClientGet = dontTellClientGet;
 			this.token = l;
 			this.returnBucket = returnBucket;
+			this.persistent = persistent;
 		}
 
-		public void onFoundEdition(long l, USK newUSK) {
+		public void onFoundEdition(long l, USK newUSK, ObjectContainer container, ClientContext context, boolean metadata, short codec, byte[] data) {
+			if(persistent)
+				container.activate(this, 2);
 			ClientSSK key = usk.getSSK(l);
 			try {
 				if(l == usk.suggestedEdition) {
-					SingleFileFetcher sf = new SingleFileFetcher(parent, cb, clientMetadata, key, metaStrings, key.getURI().addMetaStrings(metaStrings),
-							0, ctx, actx, null, null, maxRetries, recursionLevel+1, dontTellClientGet, token, false, returnBucket, true);
-					sf.schedule();
+					SingleFileFetcher sf = new SingleFileFetcher(parent, cb, null, key, metaStrings, key.getURI().addMetaStrings(metaStrings),
+							0, ctx, false, actx, null, null, maxRetries, recursionLevel+1, dontTellClientGet, token, false, returnBucket, true, container, context);
+					sf.schedule(container, context);
+					if(persistent) removeFrom(container);
 				} else {
-					cb.onFailure(new FetchException(FetchException.PERMANENT_REDIRECT, newUSK.getURI().addMetaStrings(metaStrings)), null);
+					cb.onFailure(new FetchException(FetchException.PERMANENT_REDIRECT, newUSK.getURI().addMetaStrings(metaStrings)), null, container, context);
+					if(persistent) removeFrom(container);
 				}
 			} catch (FetchException e) {
-				cb.onFailure(e, null);
+				cb.onFailure(e, null, container, context);
+				if(persistent) removeFrom(container);
 			}
 		}
-
-		public void onFailure() {
-			cb.onFailure(new FetchException(FetchException.DATA_NOT_FOUND, "No USK found"), null);
+		
+		private void removeFrom(ObjectContainer container) {
+			container.delete(metaStrings);
+			container.delete(this);
+			container.activate(usk, 5);
+			usk.removeFrom(container);
 		}
 
-		public void onCancelled() {
-			cb.onFailure(new FetchException(FetchException.CANCELLED, (String)null), null);
+		public void onFailure(ObjectContainer container, ClientContext context) {
+			if(persistent)
+				container.activate(this, 2);
+			cb.onFailure(new FetchException(FetchException.DATA_NOT_FOUND, "No USK found"), null, container, context);
+			if(persistent) removeFrom(container);
+		}
+
+		public void onCancelled(ObjectContainer container, ClientContext context) {
+			if(persistent)
+				container.activate(this, 2);
+			cb.onFailure(new FetchException(FetchException.CANCELLED, (String)null), null, container, context);
+			if(persistent) removeFrom(container);
 		}
 
 		public short getPollingPriorityNormal() {
@@ -821,6 +1186,48 @@ public class SingleFileFetcher extends SimpleSingleFileFetcher {
 			return parent.getPriorityClass();
 		}
 
+	}
+	
+	public void objectOnActivate(ObjectContainer container) {
+		Logger.minor(this, "ACTIVATING: "+this, new Exception("debug"));
+	}
+	
+	public void removeFrom(ObjectContainer container, ClientContext context) {
+		if(logMINOR) Logger.minor(this, "removeFrom() on "+this);
+		uri.removeFrom(container);
+		if(thisKey != null)
+			thisKey.removeFrom(container);
+		if(ah != null) {
+			ah.activateForExecution(container);
+			ah.removeFrom(container);
+		}
+		metaStrings.clear();
+		container.delete(metaStrings);
+		clientMetadata.removeFrom(container);
+		// actx is global to the ClientRequest, not our problem
+		decompressors.clear();
+		removeMetadata(container);
+		removeArchiveMetadata(container);
+		container.delete(decompressors);
+		super.removeFrom(container, context);
+	}
+	
+	private void removeMetadata(ObjectContainer container) {
+		if(!persistent) return;
+		if(logMINOR) Logger.minor(this, "removeMetadata() on "+this);
+		if(metadata == null) return;
+		container.activate(metadata, 1);
+		metadata.removeFrom(container);
+		metadata = null;
+	}
+
+	private void removeArchiveMetadata(ObjectContainer container) {
+		if(!persistent) return;
+		if(logMINOR) Logger.minor(this, "removeArchiveMetadata() on "+this);
+		if(archiveMetadata == null) return;
+		container.activate(archiveMetadata, 1);
+		archiveMetadata.removeFrom(container);
+		archiveMetadata = null;
 	}
 
 }
